@@ -1,3 +1,12 @@
+2009-02-12  Les Harris  <lharris@gnome.org>
+
+	* src/mud-connections.c: Closed memory leak. Simplified logic
+	in a control structure.
+	* src/mud-connection-view.c, src/mud-log.c, src/modules.c,
+	  src/mud-window.c: fwrites() now raise g_critical on failure.
+	  All functions that expect a format get one now rather than
+	  simply a string as format+data.
+
 2009-02-05  Les Harris  <lharris@gnome.org>
 
 	* src/mud-telnet-mccp.[ch]: Removed files.
